# lynx

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/scripts/: run_benchmarks.sh
crates/lynx-cli/: Cargo.toml
crates/lynx-cli/src/: main.rs
crates/lynx-common/: Cargo.toml
crates/lynx-core/: Cargo.toml
crates/lynx-core/src/: lib.rs
crates/lynx-core/src/classifier/: mod.rs
crates/lynx-core/src/indexing/: mod.rs
crates/lynx-core/src/pipeline/: mod.rs
crates/lynx-core/src/ranking/: mod.rs
crates/lynx-core/src/retrieval/: mod.rs
crates/lynx-embed/: Cargo.toml
crates/lynx-embed/src/: lib.rs
crates/lynx-embed/src/fastembed/: mod.rs
crates/lynx-mcp/: Cargo.toml
crates/lynx-mcp/src/: main.rs
crates/lynx-parser/: Cargo.toml
crates/lynx-parser/src/: lib.rs
crates/lynx-parser/src/symbol_extraction/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/lynx-protocol/: Cargo.toml
crates/lynx-protocol/src/: lib.rs
crates/lynx-storage/: Cargo.toml
crates/lynx-storage/src/: lib.rs
crates/lynx-storage/src/cache/: mod.rs
crates/lynx-storage/src/schema/: mod.rs
crates/lynx-storage/src/tantivy/: mod.rs
docs/architecture/: lynx-discovery-engine.md  lynx-technical-specification.md
docs/report-issues/: report-v1.md  report-v2.md  report-v3.md  report-v4.md  report-v5.md
testdata/: auth.go  auth.py
