[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/PizenLabs/lynx"
homepage = "https://github.com/PizenLabs/lynx"

[workspace.dependencies]
lynx-common = { package = "pizen-lynx-common", path = "crates/lynx-common", version = "0.1.1" }
lynx-core = { package = "pizen-lynx-core", path = "crates/lynx-core", version = "0.1.1" }
lynx-embed = { package = "pizen-lynx-embed", path = "crates/lynx-embed", version = "0.1.1" }
lynx-mcp = { package = "pizen-lynx-mcp", path = "crates/lynx-mcp", version = "0.1.1" }
lynx-parser = { package = "pizen-lynx-parser", path = "crates/lynx-parser", version = "0.1.1" }
lynx-protocol = { package = "pizen-lynx-protocol", path = "crates/lynx-protocol", version = "0.1.1" }
lynx-storage = { package = "pizen-lynx-storage", path = "crates/lynx-storage", version = "0.1.1" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
