[package]
name = "pizen-lynx"
version = "0.1.0"
edition = "2021"
description = "CLI for the Lynx platform."
license = "MIT"
repository = { workspace = true }
homepage = { workspace = true }

[[bin]]
name = "lx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
lynx-core = { package = "pizen-lynx-core", version = "0.1.0", path = "../lynx-core" }
lynx-protocol = { package = "pizen-lynx-protocol", version = "0.1.0", path = "../lynx-protocol" }
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = "0.3.23"
