[package]
name = "pizen-lynx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "CLI for the Lynx platform."

[[bin]]
name = "lx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = "0.3.23"

lynx-core.workspace = true
lynx-protocol.workspace = true
