[package]
name = "pizen-lynx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Core engine for the Lynx platform."

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"

lynx-embed.workspace = true
lynx-parser.workspace = true
lynx-protocol.workspace = true
lynx-storage.workspace = true
