[package]
name = "pizen-lynx-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Embedding support for Lynx."

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
fastembed = "5.15.0"

lynx-protocol.workspace = true
