[package]
name = "lynx-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
lynx-core = { version = "0.1.0", path = "../lynx-core" }
lynx-protocol = { version = "0.1.0", path = "../lynx-protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["full"] }
