[package]
name = "pizen-lynx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Model context protocol integration for Lynx."

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["full"] }

lynx-core.workspace = true
lynx-protocol.workspace = true
