[package]
name = "pizen-lynx-parser"
version = "0.1.0"
edition = "2021"
description = "Source code parser for Lynx."
license = "MIT"
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
lynx-protocol = { package = "pizen-lynx-protocol", version = "0.1.0", path = "../lynx-protocol" }
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
