[package]
name = "pizen-lynx-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Source code parser for Lynx."

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"

tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

lynx-protocol.workspace = true
