[package]
name = "pizen-lynx-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Storage layer for Lynx."

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tantivy = "0.26.1"

lynx-protocol.workspace = true
